--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,8 +12,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
-          architecture: x64
+          flutter-version: '3.19.x' 
       - run: flutter pub get
       
 
