--- a/.github/workflows/build_ios.yaml
+++ b/.github/workflows/build_ios.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build_ios:
     name: Build Flutter IPA (iOS)
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
       - name: Checkout code
