--- a/.github/workflows/build_ios.yaml
+++ b/.github/workflows/build_ios.yaml
@@ -19,6 +19,12 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+        
+      - name: Install CocoaPods dependenciesasd
+        run: |
+          cd ios
+          pod repo update
+          pod update DKImagePickerController
 
       - name: Install CocoaPods dependencies
         working-directory: ios
